Changelog for HLint

1.6.17
    Force cpphs-1.10, since 1.11 breaks the interface
    More hints from the Data.Maybe module
    #262, add support for the TupleSections extension
    #264, upgrade to haskell-src-exts-1.8.*, fixes QuasiQuote pos
    Upgrade to cpphs 1.10
    #266, don't match hints that appear to be the definitions
    #248, tone down the eta reduction hints
    Add support for WARNING pragma's to reclassify hints
    Support ignoring hints on types
    Give better error messages on incorrect settings files
    Add temporary haskell-src-exts 1.5/1.6 compatibility
    #327, add hints to use expressions infix
    #240, if a then True else False no longer suggests a || False
    Upgrade to haskell-src-exts-1.7.*
    #236, support changing the text encoding with --encoding/--utf8
    #260, generate nicer lambdas for (($) . f)
    Add the hint (($) . f) ==> (f $)
1.6.16
    Further performance enhancements (for details see my blog)
    Update to uniplate 1.5.* (fixes performance bug)
    Improve speed based on profiling (roughly twice as fast)
    #245, add hints for excess brackets in types and patterns
    Make 100% redundant brackets an error
    Fix bug where qualified names did not match
    Remove dependency on SYB
    #234, allow TH top-level splices for ignore
    #110, add tests for ignoring commands
1.6.15
    Upgrade to uniplate 1.4.* (fixes performance bug)
    #192, make HLint into a fairly basic library
    Add --datadir to allow running with a different data directory
    #254, eliminate foldl/map fusion rules (which were untrue)
    Fix a few typos in the hint rules
    Upgrade to uniplate 1.3.*
    Upgrade to haskell-src-exts 1.6.*
    Add a .ghci file snippet
    #247, Fix bug matching expressions containing position info
1.6.14
    Upgrade to haskell-src-exts 1.5.*
1.6.13
    #246, redundant brackets in [(...)]
    Add fold/map fusion hints
    Don't suggest namings that are already used in the module