@@ -36,7 +36,7 @@ library
     build-depends:
         base == 4.*, process, filepath, directory, mtl, containers,
         hscolour == 1.15.*,
-        cpphs == 1.10.*,
+        cpphs == 1.11.*,
         haskell-src-exts == 1.8.*,
         uniplate == 1.5.*
 
